casdoor/server/helm/route.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: casdoor-route
  namespace: casdoor
spec:
  parentRefs:
    - name: casdoor-gateway
      sectionName: https # 对应 Gateway 的监听器名称
  hostnames:
    - "casdoor.sumery.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: casdoor
          port: 8000
